added prod build

--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+    <script src="stubs.js" defer></script>
+    <script src="vendor.js" defer></script>
+    <script src="index.js" defer></script>
     <title>Step 0</title>
     <style>
         body {
@@ -44,9 +47,7 @@
     </style>
 </head>
 <body>
-
     <div id='root'></div>
-    <script src="stubs.js"></script>
-    <script src="index.js"></script>
+
 </body>
 </html>
